# ai-team

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cursorrules.md  initial-prompt.md  pyproject.toml
.archive/demos-removed-2026-06-28/01_hello_world/: expected_output.json
.archive/docs/langgraph/: LANGGRAPH_MIGRATION_PLAN.md
.claude/: launch.json
.claude/skills/api-design/: SKILL.md
.claude/skills/code-review/: SKILL.md
.cursor/: hooks.json
.cursor/hooks/: pre-push-check.sh
.cursor/rules/: agent-roles-and-routing.mdc  ai-team-core.mdc  crewai-agents-crews-flows.mdc  crewai-tools.mdc  how-to-add-features.mdc  models-and-state.mdc  pydantic-and-errors.mdc  python-style.mdc  quality-pitfalls-and-deps.mdc  security-requirements.mdc  testing-standards.mdc
.github/workflows/: ci.yml  release.yml
demos/: .gitignore  DEMO_SCENARIOS.md  SCREENSHOTS.md
demos/00_smoke_test/: BUSINESS_USE_CASE.md  expected_output.json  input.json
demos/01_hello_world/: BUSINESS_USE_CASE.md  RESULTS.md  failure_report.json  input.json  project_description.txt  run_report.json
demos/02_todo_app/: BUSINESS_USE_CASE.md  expected_output.json  input.json
demos/03_data_pipeline/: BUSINESS_USE_CASE.md  expected_output.json  input.json
demos/04_ml_api/: BUSINESS_USE_CASE.md  expected_output.json  input.json
demos/05_microservices/: BUSINESS_USE_CASE.md  expected_output.json  input.json
demos/06_karpathy_optimization/: BUSINESS_USE_CASE.md  expected_output.json  input.json  metric.yaml  strategy.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: AGENTS.md  ARCHITECTURE.md  COMPARISON_RESULTS.md  CREWAI_REFERENCE.md  DATA_INTEGRITY_FIXES.md  DEMOS.md  EVALS.md  FLOWS.md  GETTING_STARTED.md  GUARDRAILS.md  HANDOFF_2026_06_24.md  HARDWARE.md  LANGGRAPH_INVESTIGATION.md  MEMORY.md  MODELS.md  OLLAMA_SETUP.md  RESULTS.md  SELF_IMPROVEMENT.md  SELF_IMPROVEMENT_AUDIT.md  SELF_IMPROVEMENT_DESIGN.md  SHOWCASE_PLAN.md  SPEC_DRIVEN_AND_GIT_WORKFLOW_DESIGN.md  TEAM_PROFILES.md  TESTING_PLAN.md  TOOLS.md  UI_UX_IMPROVEMENT_PLAN.md  UI_UX_IMPROVEMENT_PLAN_PHASE2.md  UI_UX_IMPROVEMENT_PLAN_PHASE3.md  UX_IMPLEMENTATION_TASKS.md  UX_REVIEW.md  WEB_DASHBOARD.md  benchmark_results.json  eval-stabilization-tasks.md  from-karpathy-auto-research.md  handoff-2026-06-25.md  handoff-2026-06-26.md  handoff-2026-06-28.md  handoff-2026-07-01.md  initial-prompt.md  journey.md  (+6 more)
docs/claude-agent-sdk/: CLAUDE_AGENT_SDK_PLAN.md  RUNBOOK.md
docs/journal/: 2026-06-26-general.md  2026-06-28.md  2026-07-01.md  2026-07-02.md  2026-07-04.md  2026-07-06.md  README.md  journey.md
docs/langgraph/: LANGGRAPH_MIGRATION_PLAN.md
docs/posts/: SCREENSHOTS.md  failure-taxonomy.md  smoke_test_post.md  substack_post.md  todo_compare_results.md
docs/prompts/: PROMPTS.md  PROMPT_TRACKING.md  README.md  phase-0-1-pyproject-toml.md  phase-0-2-ollama-setup-script.md  phase-0-3-model-benchmark.md  phase-1-1-project-scaffold.md  phase-1-2-settings-module.md  phase-1-3-dockerfile.md  phase-2-13-security-guardrails.md  phase-2-2-manager-agent.md  phase-2-5-backend-developer-agent.md  phase-2-8-secure-file-tools.md  phase-3-10-main-flow.md  phase-3-11-conditional-routing.md  phase-3-5-planning-crew.md  phase-4-1-4-3-unified-memory.md  phase-4-6-structured-output-models.md  phase-4-7-callback-system.md  phase-5-3-guardrail-test-suite.md  phase-5-6-demo-project-1.md  phase-6-1-gradio-ui.md  phase-6-6-readme.md
docs/troubleshooting/: README.md  gil-starvation-hitl-delay.md  langgraph-reliability-investigation.md  tests-pass-app-broken.md
evals/: fixtures.py  metrics.py  run_evals.py  test_backend_comparison.py
evals/backends/: test_claude_sdk_eval.py  test_crewai_eval.py  test_langgraph_eval.py
evals/role_evals/: test_optimizer_eval.py
evals/scenarios/: architecture-planning-intermediate.json  devops-cicd-intermediate.json  hello-world-smoke.json  iac-aws-intermediate.json  qa-test-improvement-beginner.json  security-review-intermediate.json  smoke-test.json  todo-api-beginner.json
output/: 52ba5c01-ff0d-4eb3-8d8c-b6e2e754520f_state.json  README.md  ee34836f-451c-4d7a-ac09-258f952ae356_state.json  h1_state.json  h2_state.json  h3_state.json  h4_state.json
output/deployment/: deployment_packaging.md
output/docs/: documentation_generation.md
output/infrastructure/: infrastructure_design.md
scripts/: batch_stats.py  benchmark.py  benchmark_ollama_models.py  capture_demo.py  ci_check.sh  ci_unit_test.sh  compare_backends.py  eval_smoke.py  extract_lessons.py  ingest_knowledge.py  monitor_demo.sh  monitor_output.py  pip_audit.sh  pre_push_check.sh  quickstart.sh  run_demo.py  run_smoke_batch.py  run_with_fail_fast.py  setup_ollama.sh  show_metrics.py  test_models.py  watch_test_run.sh
src/ai_team/: __init__.py  __main__.py  main.py  monitor.py
test-results/: unit.xml
tests/: __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  test_e2e_flow.py  test_e2e_hello_world.py
tests/guardrails/: __init__.py  conftest.py  test_behavioral_guardrails.py  test_quality_guardrails.py  test_retry_behavior.py  test_security_guardrails.py
tests/integration/: __init__.py  conftest.py  test_claude_agent_sdk_backend_integration.py  test_crews.py  test_flow_integration.py  test_flow_routing.py  test_full_flow.py  test_git_workflow.py  test_guardrails_in_flow.py  test_langgraph_backend_integration.py  test_langgraph_interrupt_resume.py  test_langgraph_subgraphs_live.py  test_memory_integration.py  test_openrouter.py  test_planning_crew.py
tests/performance/: conftest.py  test_benchmarks.py
tests/unit/: __init__.py  conftest.py  test_agents.py  test_backend_comparison.py  test_checkpointer_resolution.py  test_comparison_report.py  test_demo_input.py  test_guardrails.py  test_judge_independence.py  test_long_term_memory.py  test_main.py  test_memory.py  test_monitor.py  test_run_demo.py  test_settings.py  test_team_profile.py  test_tools.py
ui/: app.py
ui/components/: __init__.py
(+384 files in other folders)
