[project]
name = "ai-team"
version = "0.1.0"
description = "Autonomous Multi-Agent Software Development Team using CrewAI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools",
    "langchain-ollama",
    "pydantic>=2.0",
    "gradio",
    "python-dotenv",
    "structlog",
    "pytest",
    "pytest-asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "pytest-timeout",
    "pytest-mock",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
ai-team = "ai_team.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ai_team"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
