[tool.poetry]
name = "ai-team"
version = "0.1.0"
description = "Autonomous Multi-Agent Software Development Team using CrewAI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "ai_team", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
crewai = "^0.80.0"
crewai-tools = "^0.14.0"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
gradio = "^4.0.0"
structlog = "^24.1.0"
rich = "^13.7.0"
chromadb = "^0.5.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
gitpython = "^3.1.0"
pyyaml = "^6.0.0"
jinja2 = "^3.1.0"
httpx = "^0.27.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.3.0"
pytest-mock = "^3.12.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
black = "^24.3.0"
isort = "^5.13.0"

[tool.poetry.scripts]
ai-team = "ai_team.main:main"
ai-team-ui = "ai_team.ui.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ai_team"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
