[tool.poetry]
name = "ai-team"
version = "0.1.0"
description = "Autonomous Multi-Agent Software Development Team using CrewAI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "ai_team", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
# OpenRouter: crewai (includes LiteLLM), pydantic-settings (OpenRouterSettings), rich (cost display)
crewai = "^1.0.0"
crewai-tools = "^1.0.0"
langchain-community = "^0.3.0"
pydantic = "^2.7.0"
pydantic-settings = ">=2.2.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
rich = ">=13.0.0"
chromadb = ">=1.1.0,<1.2.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
gitpython = "^3.1.0"
pyyaml = "^6.0.0"
jinja2 = "^3.1.0"
httpx = "^0.27.0"
tenacity = "^8.2.0"
# Pin below 1.80 to avoid Pydantic 2.12+ recursion issues (CrewAI ecosystem fix).
# Note: 1.167.1 is not on PyPI; 1.74.9 is the minimum CrewAI 1.6.1 accepts (litellm extra).
litellm = "1.74.9"
setuptools = "^78.1.1"
langgraph = ">=0.4.0"
langchain-core = ">=0.3.0"
langchain-openai = ">=0.3.0"
langgraph-checkpoint-sqlite = ">=2.0.0"
langgraph-checkpoint-postgres = ">=2.0.0"
langgraph-supervisor = "^0.0.31"
huggingface-hub = ">=0.20,<1"
textual = ">=0.80.0"
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
cryptography = "^46.0.6"
pillow = "^12.1.1"
pygments = "^2.20.0"
pyjwt = "^2.12.0"
requests = "^2.33.0"
# Transitive via several stacks; floor for CVE fixes (e.g. CVE-2026-34513 family).
aiohttp = ">=3.13.4"
claude-agent-sdk = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.3.0"
pytest-mock = "^3.12.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
black = "^26.3.1"
isort = "^5.13.0"
flask = "^3.1.3"
types-pyyaml = "^6.0.12.20250915"
pip-audit = "^2.10.0"

[tool.poetry.scripts]
ai-team = "ai_team.main:main"
ai-team-tui = "ai_team.ui.tui.app:main"
ai-team-web = "ai_team.ui.web.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Resolve src-layout duplicate-module errors (same file as ``ai_team.*`` vs ``src.ai_team.*``).
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "ai_team.backends.langgraph_backend.*",
  "ai_team.backends.claude_agent_sdk_backend.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "ai_team.tools.test_tools",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "ai_team.agents.*",
  "ai_team.crews.*",
  "ai_team.flows.main_flow",
  "ai_team.ui.tui.*",
  "ai_team.memory.memory_config",
  "ai_team.tools.git_tools",
  "ai_team.utils.callbacks",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: integration tests (may require API keys or external services).",
    "e2e: end-to-end tests (real AITeamFlow run, no mocks).",
    "full_flow: full AITeamFlow tests driven by manual runner (no kickoff).",
    "real_llm: integration tests that use real OpenRouter when AI_TEAM_USE_REAL_LLM=1.",
    "slow: slow tests (e.g. real LLM or long runs); exclude with -m 'not slow'.",
    "timeout: per-test timeout (pytest-timeout).",
    "performance: performance benchmark tests; record timings and write benchmark_results.json.",
]

[tool.coverage.run]
source = ["src/ai_team"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
